- Core: Faster watchdog processing, only one watchdog reason per pool or miner
- Core / Includes.psm1: 'Get-Device' Ignore devices with negative PCIbus

Fixes:
- AutoUpdater: Do not add 'Debug' to '$LogToFile' & '$LogToScreen' configuration items if not set in current config
- Legacy GUI: Not saving windows size and position (regression from 6.2.9)
- ZergPool balances tracker not working


ChangeLog UG-Miner 6.2.10 2024/06/20
====================================

Fixes:
- Core: Fix compatibility with WindowsTerminal
- Core: Miner would get suspended even when it succeeded benchmarking on the 3rd attempt
- Core: '$MinerInstancePerDeviceModel' not detected on fresh config
- Core / Includes.psm1: 'Get-DAGdata' &' Update-DAGdata' add support for StakeCube coin (SCC) DAG calculation
- Miners: Change algorithm for Blakecoin to Blake2s
- RrkzCpu-v4.2: Disable mining using an SSL pool connection (not supported by miner)
- Wildrig-v0.40.5: Invalid device selection in mixed GPU scenarios

Miner updates:
- MiniZ-v2.4d
- SRBMinerMulti-v2.5.7


ChangeLog UG-Miner 6.2.9 2024/06/13
===================================

Enhancements:
- API: Add '/pools/expired' data
- Core: Minor code optimizations when reading miner objects
- Miners: Comment out obsolete code for better speed

Fixes:
- Core: Do not count dry run miner launches as miner activation
- TTMiner-v2024.2.0: Incorrect command line (double -p)
- Web GUI: Right mouse button context actions for miners broken

Miner changes:
- lolMiner-v1.88
- MeowPowMiner-v2.0.0
- XmRig-v6.21.3.15


ChangeLog UG-Miner 6.2.8 2024/06/08
===================================

Fixes:
- Core / Includes.psm1: Restarting core loop when internet connection is lost
- Core / Includes.psm1: Not stopping running miners when exiting UG-Miner

Improvements:
- Core: Suspend balances tracker und brains when internet connection is lost

Miner changes:
- BzMiner-v21.2.0
- JayddeeCpu-v24.3
- OneZeroMiner-v1.3.4
- Rigel-v1.17.4
- SRBMinerMulti-v2.5.6